--- a/conf/SimGCL.yaml
+++ b/conf/SimGCL.yaml
@@ -1,11 +1,11 @@
-training.set: ./dataset/yelp2018/train.txt
-test.set: ./dataset/yelp2018/test.txt
+training.set: ./dataset/ml1m/train.txt
+test.set: ./dataset/ml1m/test.txt
 
 model:
   name: SimGCL
   type: graph
 
-item.ranking.topN: [10,20]
+item.ranking.topN: [30,50]
 
 embedding.size: 64
 max.epoch: 20
